making sure things are too different between versions

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "react web app leveraging github's API",
   "main": "server.js",
   "scripts": {
-    "test": "DEBUG='Backend-Portfolio*' mocha ",
+    "test": "DEBUG='Backend-Portfolio*' mocha test/server-test.js",
     "nodemon": "DEBUG='Backend-Portfolio*' node server.js",
     "start": "DEBUG='Backend-Portfolio*' node server.js",
     "build": "",
-    "coveralls": ""
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -24,27 +24,30 @@
   },
   "homepage": "https://github.com/loganabsher/portfolio#readme",
   "devDependencies": {
-    "chai": "^4.1.1",
-    "mocha": "^3.5.0"
+    "chai": "~4.1.1",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "~3.0.2",
+    "istanbul": "~0.4.5",
+    "mocha": "~6.0.0-0"
   },
   "dependencies": {
-    "bcrypt": "^3.0.1",
-    "bluebird": "^3.5.2",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "crypto": "^1.0.1",
-    "debug": "^4.1.0",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "faker": "^4.1.0",
-    "http-errors": "^1.7.1",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.3.1",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-twitter": "^1.0.4",
-    "superagent": "^4.0.0-beta.5"
+    "bcrypt": "~3.0.1",
+    "bluebird": "~3.5.2",
+    "body-parser": "~1.18.3",
+    "cors": "~2.8.4",
+    "crypto": "~1.0.1",
+    "debug": "~4.1.0",
+    "dotenv": "~6.0.0",
+    "express": "~4.16.3",
+    "express-session": "~1.15.6",
+    "faker": "~4.1.0",
+    "http-errors": "~1.7.1",
+    "jsonwebtoken": "~8.3.0",
+    "mongoose": "~5.3.1",
+    "morgan": "~1.9.1",
+    "passport": "~0.4.0",
+    "passport-facebook": "~2.1.1",
+    "passport-twitter": "~1.0.4",
+    "superagent": "~4.0.0-beta.5"
   }
 }
