--- a/package.json
+++ b/package.json
@@ -31,22 +31,19 @@
     "mocha": "~6.0.0-0"
   },
   "dependencies": {
-    "bcrypt": "~3.0.1",
-    "bluebird": "~3.5.2",
+    "bcrypt": "~3.0.6",
+    "bluebird": "~3.5.4",
     "body-parser": "~1.18.3",
-    "cors": "~2.8.4",
-    "crypto": "~1.0.1",
+    "cors": "~2.8.5",
     "debug": "~4.1.0",
     "dotenv": "~6.0.0",
     "express": "~4.16.3",
     "express-session": "~1.15.6",
-    "http-errors": "~1.7.1",
-    "jsonwebtoken": "~8.3.0",
-    "mongoose": "~5.3.1",
+    "http-errors": "~1.7.2",
+    "jsonwebtoken": "~8.5.1",
+    "mongoose": "~5.5.3",
     "morgan": "~1.9.1",
-    "passport": "~0.4.0",
-    "passport-facebook": "~2.1.1",
-    "passport-twitter": "~1.0.4",
-    "superagent": "~4.0.0-beta.5"
+    "superagent": "~5.0.2",
+    "uuid": "^3.3.2"
   }
 }
